subprojects/docs/src/docs/css/base.css
/* ... */
code em, tt em {
    text-decoration: none;
}

/* util classes */
.left {
    float: left !important;
}

p .left {
    margin: 1.5em 1.5em 1.5em 0;
    padding: 0;
}

.right {
    float: right !important;
}

p .right {
    margin: 1.5em 0 1.5em 1.5em;
    padding: 0;
}

.small {
    font-size: .8em;
    margin-bottom: 1.875em;
    line-height: 1.875em;
}

.large {
    font-size: 1.2em;
    line-height: 2.5em;
    margin-bottom: 1.25em;
}

.hide {
    display: none;
}

.quiet {
    color: #666;
}

.loud {
    color: #000;
}

.highlight {
    background: #ff0;
}

.added {
    background: #060;
    color: #fff;
}

.removed {
    background: #900;
    color: #fff;
}

.first {
    margin-left: 0;
    padding-left: 0;
}

.last {
    margin-right: 0;
    padding-right: 0;
}

.top {
    margin-top: 0;
    padding-top: 0;
}

.bottom {
    margin-bottom: 0;
    padding-bottom: 0;
}

table th.border-right {
    border-right: solid #d0d0d0 1px;
}

table th.no-border-bottom {
    border-bottom: none;
}

h3.releaseinfo {
    color: #999;
    font-weight: normal;
    margin-top: -0.5em;
}

/* Site header specific styles */
.hamburger {
    background-color: transparent;
    background-image: none;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    margin-left: auto;
    padding: 11px 10px;
}

.hamburger:focus {
    outline: 0;
}

.hamburger__bar {
    display: block;
    width: 22px;
    height: 2px;
    background-color: black;
    border-radius: 1px;
}

.hamburger__bar + .hamburger__bar {
    margin-top: 4px;
}

.site-header {
    background-color: white;
}

.site-header .site-header-version {
    align-self: center;
    color: #1DA2BD;
    font-size: 20px;
    font-weight: 500;
    padding-left: 1px;
}

/* Override javadoc styles */
.site-header div {
    font-family: 'Lato', Arial, sans-serif;
}
.site-header__navigation-header a {
    align-self: center;
    border-bottom: 0 none;
}

.site-header__navigation {
    display: flex;
    flex-direction: column;
}

.site-header__navigation-header {
    display: flex;
    flex: 0 0 auto;
    margin-left: 12px;
}

.site-header__navigation-collapsible {
    flex: 1 1 auto;
    height: 304px;
    overflow: visible;
    transition: height 0.3s ease;
}

.site-header__navigation-items {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    float: left;
    width: 100%;
    margin: 0 20px 0 0;
    padding-top: 12px;
    padding-left: 0;
    list-style-type: none;
}

.site-header__navigation-item {
    flex: 0 1 auto;
    width: 100%;
    font-size: 16px;
}

.site-header__navigation-item .site-header__navigation-link {
    position: relative;
    display: inline-block;
    cursor: pointer;
    width: 100%;
    padding: 5px;
    line-height: 20px;
    border: 0 none;
    color: #02303A;
    text-decoration: none;
    transition: none;
    -o-transition: none;
    -moz-transition: none;
    -webkit-transition: none;
}

.site-header__navigation-item .site-header__navigation-link:hover {
    color: #1DA2BD;
}

.site-header__navigation-item .site-header__navigation-link.active {
    font-weight: 500;
}

/* Navigation submenu styles */
.site-header__navigation-submenu-section {
    position: relative;
}

.site-header__navigation-submenu-section .site-header__down-arrow {
    width: 8px;
    height: 8px;
    margin-left: 2px;
    margin-top: 0;
}

.site-header__navigation-submenu-section .site-header__navigation-link:hover {
    color: #02303A;
}

.site-header__navigation-submenu-section .site-header__navigation-link:hover path {
    fill: none;
}

.site-header__navigation-submenu-section .site-header__navigation-submenu .site-header__navigation-submenu-item-link:hover {
    color: #1DA2BD;
}

.site-header__navigation-submenu-section .site-header__navigation-submenu {
    display: none;
    width: 170px;
    background-color: white;
    top: 40px;
    left: 21px; /* NOTE: This must match the padding of .site-header__navigation-link */
    padding: 3px 10px 6px 10px;
    z-index: 100;
}

.site-header__navigation-submenu-section .site-header__navigation-submenu .site-header__navigation-submenu-item-link {
    width: 100%;
    color: #02303A;
    white-space: nowrap;
    display: inline-block;
    padding-top: 3px;
    border: 0 none;
    transition: none;
    -o-transition: none;
    -moz-transition: none;
    -webkit-transition: none;
}

.site-header__navigation-submenu-section .site-header__navigation-submenu .site-header__navigation-submenu-item-link .site-header__navigation-submenu-item-link-text {
    display: inline-block;
    font-size: 16px;
}

.site-header__navigation-submenu-section.open .site-header__navigation-submenu {
    display: block;
}

/* Top navigation mobile styles */
@media (max-width: 1023px) {
    .site-header__navigation-collapsible--collapse {
        height: 0;
        overflow-y: hidden;
    }

    .site-header__navigation-submenu {
        top: 30px !important;
        left: 0 !important;
    }

    .site-header-version {
        display: none;
    }

    .site-footer__navigation {
        flex-direction: column;
    }

    .site-footer__links {
        flex-wrap: wrap;
    }
}
/* ... */

